# LunaBot_Prototype

./: .gitattributes  .gitignore  LICENSE  README.md  frames.gv  ros_requirements.txt  setup.md  start_project.sh  stop_project.sh
LunaBot-Unity/: Assembly-CSharp.csproj  LunaBot-Unity.sln
LunaBot-Unity/Assets/Scripts/: DepthCameraPublisher.cs  LidarSensor.cs  RosBridgeClient.cs  RoverController.cs
LunaBot-Unity/Lunabot-ProtoType/: Assembly-CSharp.csproj  Lunabot-ProtoType.sln  Unity.Robotics.ROSTCPConnector.Editor.csproj  Unity.Robotics.ROSTCPConnector.MessageGeneration.csproj  Unity.Robotics.ROSTCPConnector.Messages.csproj  Unity.Robotics.ROSTCPConnector.csproj
LunaBot-Unity/Lunabot-ProtoType/Assets/Lunar Landscape 3D/Resources/Geometry/: Terrain.asset  TerrainData_0177f8d9-5f8c-42fc-89e0-41e8581037fc.asset  TerrainData_1f1063df-7107-4f74-b86f-279d120f669e.asset  TerrainData_2ca6e1dd-1589-4116-a2d9-134a24e3053f.asset  TerrainData_3aa18db1-76a6-4c44-a792-6ffe30025850.asset  TerrainData_404c977b-d337-4db2-9a04-9a8ad2ff5e82.asset  TerrainData_40a9f6eb-0c3b-4d41-893c-cede539f765f.asset  TerrainData_6478db06-6937-4590-bfe8-6915d91d6a95.asset  TerrainData_86759ec0-5da0-4116-9e16-057964d38faf.asset  (+11 more)
LunaBot-Unity/Lunabot-ProtoType/Assets/Lunar Landscape 3D/Scenes/: LunarLandscape3D.unity
LunaBot-Unity/Lunabot-ProtoType/Assets/Meterials/: DepthMaterial.mat  SpaceSkybox.mat
LunaBot-Unity/Lunabot-ProtoType/Assets/Models/: barringer_meteorite_crater.glb
LunaBot-Unity/Lunabot-ProtoType/Assets/Models/Base 22/: Material__0.mat
LunaBot-Unity/Lunabot-ProtoType/Assets/Models/Map/: model.mtl  object_0.mat  object_1.mat  object_2.mat  object_3.mat  object_4.mat  object_5.mat
LunaBot-Unity/Lunabot-ProtoType/Assets/Models/Rocks/: MoonRocks.fbx  MoonRocks.mat
LunaBot-Unity/Lunabot-ProtoType/Assets/Models/Rover/: 4064.mtl  defaultMat.mat
LunaBot-Unity/Lunabot-ProtoType/Assets/Prefab/: RoverPrefab.prefab
LunaBot-Unity/Lunabot-ProtoType/Assets/Resources/: ROSConnectionPrefab.prefab
LunaBot-Unity/Lunabot-ProtoType/Assets/Scenes/: SampleScene.unity
LunaBot-Unity/Lunabot-ProtoType/Assets/Scripts/: DepthCameraPublisher.cs  FPSDisplay.cs  HazardPublisher.cs  LidarSensor.cs  LiveCameraPublisher.cs  PatrolController.cs  ROSControlledRover.cs  RosBridgeClient.cs  RoverAutonomousController.cs  RoverCameraLight.cs  RoverCameraPublisher.cs  RoverController.cs  RoverHazardDetector.cs  UIDashboard.cs  UnityMainThreadDispatcher.cs
LunaBot-Unity/Lunabot-ProtoType/Assets/shaders/: DepthToFloat.shader
LunaBot-Unity/Lunabot-ProtoType/ProjectSettings/: ProjectSettings.asset  TagManager.asset
LunaBot-Unity/ProjectSettings/: ProjectSettings.asset
LunaBotDashboard/: app.py  requirements.txt
LunaBotDashboard/static/: dashboard.js  style.css
LunaBotDashboard/static/models/: rover.mtl
LunaBotDashboard/templates/: index.html
catkin_ws/src/luna_bot_ros/: CMakeLists.txt  lunabot.rviz  package.xml
catkin_ws/src/luna_bot_ros/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_config.yaml
catkin_ws/src/luna_bot_ros/launch/: move_base.launch  rtabmap_rgbd.launch
catkin_ws/src/luna_bot_ros/msg/: Hazard.msg
catkin_ws/src/luna_bot_ros/nodes/: Avoider.py  avoider_large_rover.py  battery_simulator.py  camera_tf_publisher.py  github_avoider.py  goal_based_avoider.py  laser_scan_accumulator.py  lidar_obstacle_regions.py  luna_bot_model_setup.py  mapping_node.py  mission_manager_node.py  navigation_node.py  object_detection_node.py  obstacle_avoid_node.py  reset_nav.py  semantic_annotator.py  sensor_node.py  simple_behavior_manager.py  simple_reactive_nav.py  simple_wall_follower.py  unity_bridge.py
catkin_ws/src/luna_bot_ros/scripts/: odom_to_tf.py
docs/: api__endpoints.md  architecture.md  performance.md  ros_pipeline.md  unity_pipeline.md
(+16 files in other folders)
